2025-12-01T00:56:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19807709237 # 825
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-01
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 249 283 / 253 287
* notice: next accum: outdated-unq outdated-all / unq all: 250 284 / 253 287
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-16] / []

2025-11-28T00:43:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19750877032 # 822
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-28
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 249 283 / 252 286
* notice: next accum: outdated-unq outdated-all / unq all: 249 283 / 253 287
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-27]

2025-11-22T00:43:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19587467749 # 816
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-22
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 248 282 / 252 286
* notice: next accum: outdated-unq outdated-all / unq all: 249 283 / 252 286
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-07] / []

2025-11-20T00:44:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19521303263 # 814