@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-01T00:56:44Z",
-  "count_outdated" : 284,
-  "uniques_outdated" : 250,
+  "timestamp" : "2025-12-03T00:45:48Z",
+  "count_outdated" : 285,
+  "uniques_outdated" : 251,
   "count" : 287,
   "uniques" : 253,
   "clones" : [
-    {
-      "timestamp": "2025-11-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-11-19T00:00:00Z",
       "count": 1,
